tests/testcases/net2/errors/BCE0004-1.boo
"""
BCE0004-1.boo(7,6): BCE0004: Ambiguous reference 'List': Boo.Lang.List, System.Collections.Generic.List.
"""
import Boo.Lang
import System.Collections.Generic

l as List of int
